# Scraping_Python_Tiendas

./: .gitignore  .~lock.ara.xlsx#  .~lock.wplay.xlsx#  README.md  RunEveryDay.bat  Util.py  Utils.py  ara_precios.py  config.json  final.json  finalv2.json  main.py  network_log.json  network_log1.har  page1.py  page2.py  prubas.py  prueba.py  pyproject.toml  recipents.txt  requirements.txt  searchResults.py  shutdown.py  test copy.py  test.py  value.json  wplay.xlsx  wplay2.xlsx
Apuestas/: main.py  page3.py  requirements.txt
Precio_Tiendas/: ara_precios.py  ara_precios2.1.py  ara_precios2.py  d1_precios.py  exito_precios2.py  jumbo_precios.py  justo_bueno_precios.py  olimpica.py
Precio_Tiendas/base_de_datos/: Precios.sqlite
db/: Precios.sqlite-journal  Preciosv2.sqbpro
landsat/: GeoSpacial.py  ejemplos_landsat_stable.py  example_page.py  lansat.py  lansat8_rasterio.py  requirements.txt
src/: __init__.py  main.py  scrapy.cfg
src/database/: database.py
src/mail/: __init__.py  send_email.py
src/models/: models.py
src/scraper/: Browser.py  HomePage.py  ResultsPage.py  engine.py
src/scraper/engine/: constants.py  engine.py  option.py
src/scraping/: __init__.py  ara.py  d1.py  d1_v2.py  d1_v2_clase.py  exito.py  exitov2.py  exitov3.py  jumbo.py  olimpica.py  olimpicav2.py
src/scraping/exito/: exito.py  (+2 more)
src/scrapy_js/: items.py  middlewares.py  pipelines.py  settings.py
src/scrapy_store/: items.py  middlewares.py  pipelines.py  settings.py
src/security/: security.py
src/templates/: send_email.html
src/test/: test.py
src/utils/: util.py
(+6 files in other folders)
