[tool.poetry]
name = "scraping-python-tiendas"
version = "0.1.0"
description = ""
authors = ["d3lt409"]
readme = "README.md"
packages = [{include = "scraping_python_tiendas"}]

[tool.poetry.dependencies]
python = "^3.11"
async-generator = "1.10"
attrs = "22.2.0"
certifi = "2022.12.7"
cffi = "1.15.1"
charset-normalizer = "3.0.1"
click = "8.1.3"
colorama = "0.4.6"
et-xmlfile = "1.1.0"
h11 = "0.14.0"
html5lib = "1.1"
idna = "3.4"
lxml = "4.9.2"
numpy = "1.24.1"
openpyxl = "3.0.10"
outcome = "1.2.0"
packaging = "23.0"
pandas = "1.5.3"
pycparser = "2.21"
pysocks = "1.7.1"
python-dateutil = "2.8.2"
python-dotenv = "0.21.1"
pytz = "2022.7.1"
requests = "2.28.2"
selenium = "4.8.0"
six = "1.16.0"
sniffio = "1.3.0"
sortedcontainers = "2.4.0"
tqdm = "4.64.1"
trio = "0.22.0"
trio-websocket = "0.9.2"
urllib3 = "1.26.14"
webdriver-manager = "3.8.5"
webencodings = "0.5.1"
wsproto = "1.2.0"
xlsxwriter = "3.0.7"
scrapy = "^2.10.0"
scrapy-splash = "^0.9.0"
sqlalchemy = "^2.0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
